version adds an updater that will rebuild missing authorizations. This updater can
be found under 'Admin Tools' --> 'Segue Updates' --> 'Rebuild Implicit AZs'.

Notable changes from Harmoni and Polyphony:

* Visitor registrations are now logged.

* Log-Browsing now allows for category selection and manual user selection.
		
		
	* New feature: #1820782 
		Templates: Now have a choice of templates (starting points) when creating
		sites. 
		(2008-06-12 - Adam Franco)
		
	* Bug Fix: #1936837 
		UI1/UI2: When content is sorted by recent 1st or other reordering methods,
		the '+Content' button is at the top of the container.
		(2008-06-13 - Adam Franco)
		
	* Bug Fix: #1991431 
		UI2: Fixed error where content containers could disappear when dragged to
		the header.
		(2008-06-12 - Adam Franco)
		
	* Bug Fix: #1992250 
		UI2: Plus-symbols in text are now not lost due to Javascript not encoding
		them. 
		(2008-06-13 - Adam Franco)
		
	* Bug Fix: 
		Portal/Home:Now more theme-portable. Any theme will work ok as the default.
		(2008-06-13 - Adam Franco)
		
	* Change: 
		Configuration: Config files are now included in the main 'try' block to
		allow pretty-printing of configuration errors when backtrace-display is off.
		(2008-06-10 - Adam Franco)
		
	* Bug Fix: #1991142 
		Permissions: Fixed issue where errors in the create-site process can result
		in inaccessible sites.
		
		Also fixed an issue where implicit AZs were not created on initial site creation.
		
		Added a Segue-updater that willrebuild implicit AZs for all nodes with
		broken permissions.
		(2008-06-13 - Adam Franco)
		
	* Change: 
		Themes: Theme info now allows language-localization.
		(2008-06-13 - Adam Franco)
		
	* New feature: 
		Themes: Sites now have a default theme different from the 'program' theme.
		(2008-06-13 - Adam Franco)
		
	* Change: 
		Themes: Added margins to BevelBox headers so that the would line up with
		menus. 
		(2008-06-13 - Alex Chapin)
		
	* Change: 