@@ -35,7 +35,9 @@
 <br>
 <br>* Visitor registrations are now logged.
 <br>
-<br>* Log-Browsing now allows for category selection and manual user selection.</p>
+<br>* Log-Browsing now allows for category selection and manual user selection.
+<br>
+<br>Segue 2.0-beta-23 uses Harmoni 1.3.5 and Polyphony 1.2.5.</p>
 <ul>
 		
 		<li>
