@@ -30,6 +30,8 @@
 			* Visitor registrations are now logged.
 			
 			* Log-Browsing now allows for category selection and manual user selection.
+			
+			Segue 2.0-beta-23 uses Harmoni 1.3.5 and Polyphony 1.2.5.
 		</releaseNotes>
 		<new author='adam' date='2008-06-12' ref='1820782' reftype='fr'>
 			Templates: Now have a choice of templates (starting points) when creating sites.
